--- a/package.json
+++ b/package.json
@@ -22,13 +22,24 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/passport-google-oauth20": "^2.0.11",
     "axios": "^1.3.4",
     "discord-api-types": "^0.37.35",
     "discord-interactions": "^3.3.0",
     "dotenv-safe": "^8.2.0",
+    "mysql2": "^3.2.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-google-oidc": "^0.1.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "sequelize": "^6.29.3",
+    "sequelize-typescript": "^2.1.5",
+    "sqlite3": "^5.1.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -37,6 +48,8 @@
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
+    "@types/passport-local": "^1.0.35",
+    "@types/sequelize": "^4.28.14",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
