--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "discord-api-types": "^0.37.35",
     "discord-interactions": "^3.3.0",
     "dotenv-safe": "^8.2.0",
+    "express-session": "^1.17.3",
     "mysql2": "^3.2.0",
     "passport": "^0.6.0",
     "passport-google-oauth2": "^0.2.0",
@@ -46,6 +47,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.6",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
     "@types/passport-local": "^1.0.35",
