authorization + authentication implemented with 0Auth, saving jwt token to implement

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,9 @@ DISCORD_TOKEN=
 PUBLIC_KEY=
 CLIENT_ID=
 CLIENT_SECRET=
-APP_BASE_URL=
 SESSION_SECRET=
+APP_BASE_URL=
+AUTH0_AUDIENCE=
+AUTH0_ISSUER_URL=
+AUTHZ_CLIENT_ID=
+AUTHZ_SECRET=
