--- a/package.json
+++ b/package.json
@@ -22,13 +22,22 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/request": "^2.48.8",
     "axios": "^1.3.4",
     "discord-api-types": "^0.37.35",
     "discord-interactions": "^3.3.0",
     "dotenv-safe": "^8.2.0",
+    "express": "^4.18.2",
+    "express-openid-connect": "^2.12.1",
     "express-session": "^1.17.3",
+    "jwks-rsa": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
+    "request": "^2.88.2",
     "rxjs": "^7.2.0",
     "sequelize": "^6.29.3",
     "sequelize-typescript": "^2.1.5",
