--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.18.2",
     "express-openid-connect": "^2.12.1",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "jwks-rsa": "^3.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
