--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@types/auth0-js": "^9.14.7",
     "@types/passport-jwt": "^3.0.8",
     "@types/request": "^2.48.8",
+    "auth0-js": "^9.20.2",
     "axios": "^1.3.4",
     "discord-api-types": "^0.37.35",
     "discord-interactions": "^3.3.0",
