--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
+    "mermaid": "^10.0.2",
+    "nestjs-spelunker": "^1.1.5",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
