--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/request": "^2.48.8",
     "auth0-js": "^9.20.2",
     "axios": "^1.3.4",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "discord-api-types": "^0.37.35",
     "discord-interactions": "^3.3.0",
     "dotenv-safe": "^8.2.0",
