--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "mermaid": "^10.0.2",
     "nestjs-spelunker": "^1.1.5",
     "prettier": "^2.3.2",
+    "sequelize-mock": "^0.10.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.3",
