--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
     "nock": "^13.3.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.2",
     "rxjs": "^7.2.0",
     "sequelize": "^6.29.3",
-    "sequelize-typescript": "^2.1.5",
-    "sqlite3": "^5.1.4"
+    "sequelize-typescript": "^2.1.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -78,7 +78,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
-    "typescript": "^4.7.4"
+    "typescript": "~4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
